--- a/memes.html
+++ b/memes.html
@@ -1,7 +1,7 @@
-﻿ <!DOCTYPE html>
+﻿    <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>bootstrap.html</title>
+  <title>memes.html</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -61,9 +61,14 @@ p  {
 </ul>
 </nav>
 
-<h1>Welcome</h1>
-<p>Click through the navbar to look at the projects I did in Art 74.</p>
-<img class="img-fluid mx-auto d-block" src="IMG_2311.jpg" alt="hello" style="width:750px;height:750px;">
+<h1>Memes</h1>
+<p> Here are my memes.  I'm not familiar with popular memes. I only see animal memes on Instagram, so that is why I decided to create the cat meme. It reminds me of my own cats, and how they react to the sounds in my house, I think it's hilarious.</p>
+<p><img src="gato.meme.jpg" alt="MEME 1" style="width:750px;height:750px;"</img></p>
+<p><a href="https://knowyourmeme.com/memes/monorail-cat">Monorail Cat Meme</a></p>
+<p><a href="https://knowyourmeme.com/memes/falling-cat">Falling Cat Meme</a></p>
+<p> And here are some more memes I made for fun.</p>
+<p><img src="ayeayecaptain.meme.jpg" alt="MEME 2" style="width:750px;height:850px;"</img></p>
+<p><img src="cuteanimol.meme.jpg" alt="MEME 3" style="width:750px;height:950px;"</img></p>
 
 </div>
 </body>
