--- a/minecraft.html
+++ b/minecraft.html
@@ -1,7 +1,7 @@
 ﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>bootstrap.html</title>
+  <title>minecraft.html</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -61,9 +61,14 @@ p  {
 </ul>
 </nav>
 
-<h1>Welcome</h1>
-<p>Click through the navbar to look at the projects I did in Art 74.</p>
-<img class="img-fluid mx-auto d-block" src="IMG_2311.jpg" alt="hello" style="width:750px;height:750px;">
+<h1>Minecraft</h1>
+<p>Here is my survival base that I started off with.</p>
+<img class="img-fluid mx-auto d-block" src="mine3.jpg" alt="SURVIVAL" style="width:750px;height:750px;">
+<p>Here is my minecraft art. I created a mahjong tile. Mahjong is a game that my family likes to play with each other and with family friends. Mahjong is a Chinese game played by 4 people. To win the game you have to have a certain amount and combination of tiles. This tile is called a flower tile which is useless in the game, it's kind of like a joker card in a regular card game.</p>
+<img class="img-fluid mx-auto d-block" src="mine2.png" alt="TILE 1" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="mine1.png" alt="TILE 2" style="width:750px;height:750px;">
+
+
 
 </div>
 </body>
