--- a/netart.html
+++ b/netart.html
@@ -1,7 +1,7 @@
 ﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>bootstrap.html</title>
+  <title>memes.html</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -61,9 +61,12 @@ p  {
 </ul>
 </nav>
 
-<h1>Welcome</h1>
-<p>Click through the navbar to look at the projects I did in Art 74.</p>
-<img class="img-fluid mx-auto d-block" src="IMG_2311.jpg" alt="hello" style="width:750px;height:750px;">
+<h1>Net Art</h1>
+<p> Click the image below to see my net art.</p>
+<p>I didn't know how to get the images before, so I created links for every image (but now, I know how to do that). The format is very simple and organized, and kind of minimalistic. It's just a style that I personally like, also with a color scheme.</p>
+<a href="https://cecilia-andreotti.github.io/index.html">
+  <img class="img-fluid mx-auto d-block" src="IMG_7560.jpg" alt="Home Page" style="width:550px;height:750px;">
+</a>
 
 </div>
 </body>
