--- a/sculpture.html
+++ b/sculpture.html
@@ -1,7 +1,7 @@
-﻿ <!DOCTYPE html>
+﻿   <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>bootstrap.html</title>
+  <title>sculpture.html</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -61,9 +61,9 @@ p  {
 </ul>
 </nav>
 
-<h1>Welcome</h1>
-<p>Click through the navbar to look at the projects I did in Art 74.</p>
-<img class="img-fluid mx-auto d-block" src="IMG_2311.jpg" alt="hello" style="width:750px;height:750px;">
+<h1>3D Sculpture</h1>
+<p> Here is my first 3D print. I thought that the details on the tile (like the letter B, and the lines) weren't very noticeable, so for my second print, I'm going to improve that.</p>
+<p><img src="IMG_2177.jpg" alt="TILE" style="width:750px;height:750px;"</img></p>
 
 </div>
 </body>
