--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>bootstrap.html</title>
+  <title>index.html</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
