--- a/netart.html
+++ b/netart.html
@@ -1,7 +1,19 @@
-﻿<!DOCTYPE html>
-<html>
+﻿ <!DOCTYPE html>
+<html lang="en">
 <head>
-<title>netart.html</title>
+  <title>netart.html</title>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 a:link {
   color: lightcoral;
@@ -23,22 +35,39 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+h1 {
+  font-family: timesnewroman; text-align: center; background-color: mistyrose; color: lightcoral
+}
+p  {
+  font-family: timesnewroman; text-align: center; color: lightcoral
+}
 </style>
 </head>
 <body>
 
-<h1 style="font-size:15px;background-color:lemonchiffon;text-align:center">Note:</h1>
-<p style="text-align:center">Click the links to get to other pages or to see images.</p>
+<nav class="navbar navbar-expand-sm bg-light">
+<div class="container-fluid">
+<ul class="navbar-nav">
+  <li class="nav-item">
+    <a class="nav-link" href="glitchart.html">Glitch Art</a>
+  <li class="nav-item">
+    <a class="nav-link" href="minecraft.html">Minecraft</a>
+  <li class="nav-item">
+    <a class="nav-link" href="sculpture.html">Sculpture</a>
+  <li class="nav-item">
+    <a class="nav-link" href="memes.html">Memes</a>
+  <li class="nav-item">
+    <a class="nav-link" href="netart.html">Net Art</a>
+</ul>
+</nav>
 
-<h2 style="font-size:30px;background-color:mistyrose;text-align:center">Home:</h2>
-<p style="text-align:center"><a href="cecilia.html">About</a></p>
-<p style="text-align:center"><a href="fambam.html">Family</a></p>
-<p style="text-align:center"><a href="arte.html">Art</a></p>
+<h1>Net Art</h1>
+<p> Click the image below to see my net art.</p>
+<p>I didn't know how to get the images before, so I created links for every image (but now, I know how to do that). The format is very simple and organized, and kind of minimalistic. It's just a style that I personally like, also with a color scheme.</p>
+<a href="https://cecilia-andreotti.github.io/website.html">
+  <img class="img-fluid mx-auto d-block" src="IMG_7560.jpg" alt="Home Page" style="width:550px;height:750px;">
+</a>
 
-
-<h3 style="font-size:30px;background-color:mistyrose;text-align:center">School:</h3>
-<p style="text-align:center"><a href="draw.html">Drawing 1</a></p>
-
-
+</div>
 </body>
-</html>
+</html> 
