--- a/glitchart.html
+++ b/glitchart.html
@@ -51,13 +51,19 @@ p  {
   <li class="nav-item">
     <a class="nav-link" href="glitchart.html">Glitch Art</a>
   <li class="nav-item">
+    <a class="nav-link" href="memes.html">Meme Art</a>
+  <li class="nav-item">
     <a class="nav-link" href="minecraft.html">Minecraft</a>
   <li class="nav-item">
-    <a class="nav-link" href="sculpture.html">Sculpture</a>
-  <li class="nav-item">
-    <a class="nav-link" href="memes.html">Memes</a>
+    <a class="nav-link" href="sculpture.html">3D Print</a>
   <li class="nav-item">
     <a class="nav-link" href="netart.html">Net Art</a>
+  <li class="nav-item">
+    <a class="nav-link" href="processing.html">Processing</a>
+  <li class="nav-item">
+    <a class="nav-link" href="photoshop.html">DIY Photoshop</a>
+  <li class="nav-item">
+    <a class="nav-link" href="final.html">The Final</a>
 </ul>
 </nav>
 
