--- a/photoshop.html
+++ b/photoshop.html
@@ -1,7 +1,7 @@
 ﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>minecraft.html</title>
+  <title>photoshop.html</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -67,14 +67,13 @@ p  {
 </ul>
 </nav>
 
-<h1>Minecraft</h1>
-<p>Here is my survival base that I started off with.</p>
-<img class="img-fluid mx-auto d-block" src="mine3.jpg" alt="SURVIVAL" style="width:750px;height:750px;">
-<p>Here is my minecraft art. I created a mahjong tile. Mahjong is a game that my family likes to play with each other and with family friends. Mahjong is a Chinese game played by 4 people. To win the game you have to have a certain amount and combination of tiles. This tile is called a flower tile which is useless in the game, it's kind of like a joker card in a regular card game.</p>
-<img class="img-fluid mx-auto d-block" src="mine2.png" alt="TILE 1" style="width:750px;height:750px;">
-<img class="img-fluid mx-auto d-block" src="mine1.png" alt="TILE 2" style="width:750px;height:750px;">
-
-
+<h1>DIY Photoshop</h1>
+<p>My theme/political aspect is kpop, and this is a group called BTS. So I have images of their face, their group logo, and their fan logo. It was hard to make the images have a transparent background, but I finally got it.</p>
+<img class="img-fluid mx-auto d-block" src="bts.1.png" alt="hello" style="width:750px;height:750px;">
+<p> - </p>
+<img class="img-fluid mx-auto d-block" src="bts.2.png" alt="hello" style="width:750px;height:750px;">
+<p> - </p>
+<img class="img-fluid mx-auto d-block" src="bts.3.png" alt="hello" style="width:750px;height:750px;">
 
 </div>
 </body>
