--- a/processing.html
+++ b/processing.html
@@ -1,7 +1,7 @@
-﻿ <!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>minecraft.html</title>
+  <title>processing.html</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -67,15 +67,14 @@ p  {
 </ul>
 </nav>
 
-<h1>Minecraft</h1>
-<p>Here is my survival base that I started off with.</p>
-<img class="img-fluid mx-auto d-block" src="mine3.jpg" alt="SURVIVAL" style="width:750px;height:750px;">
-<p>Here is my minecraft art. I created a mahjong tile. Mahjong is a game that my family likes to play with each other and with family friends. Mahjong is a Chinese game played by 4 people. To win the game you have to have a certain amount and combination of tiles. This tile is called a flower tile which is useless in the game, it's kind of like a joker card in a regular card game.</p>
-<img class="img-fluid mx-auto d-block" src="mine2.png" alt="TILE 1" style="width:750px;height:750px;">
-<img class="img-fluid mx-auto d-block" src="mine1.png" alt="TILE 2" style="width:750px;height:750px;">
-
-
+<h1>Processing Self-Portrait</h1>
+<img class="img-fluid mx-auto d-block" src="sp1.jpg" alt="Self Portrait" style="width:750px;height:750px;">
+<p> </p>
+<p>Code:</p>
+<img class="img-fluid mx-auto d-block" src="sp1.png" alt="Code 1" style="width:350px;height:850px;">
+<img class="img-fluid mx-auto d-block" src="sp2.png" alt="Code 2" style="width:350px;height:1000px;">
+<img class="img-fluid mx-auto d-block" src="sp3.png" alt="Code 3" style="width:350px;height:450px;">
 
 </div>
 </body>
-</html> 
+</html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
