--- a/photoshop.html
+++ b/photoshop.html
@@ -74,6 +74,14 @@ p  {
 <img class="img-fluid mx-auto d-block" src="bts.2.png" alt="hello" style="width:750px;height:750px;">
 <p> - </p>
 <img class="img-fluid mx-auto d-block" src="bts.3.png" alt="hello" style="width:750px;height:750px;">
+<p> - </p>
+<img class="img-fluid mx-auto d-block" src="diyps.1.png" alt="hello" style="width:750px;height:750px;">
+<p> - </p>
+<img class="img-fluid mx-auto d-block" src="diyps.2.png" alt="hello" style="width:750px;height:750px;">
+<p> - </p>
+<img class="img-fluid mx-auto d-block" src="diyps.3.png" alt="hello" style="width:750px;height:750px;">
+<p> - </p>
+<img class="img-fluid mx-auto d-block" src="diyps.4.png" alt="hello" style="width:750px;height:750px;">
 
 </div>
 </body>
