--- a/final.html
+++ b/final.html
@@ -68,53 +68,51 @@ p  {
 </nav>
 
 <h1>Final Project</h1>
-<p>For the final project, I decided to amplify the glitch art project with some of my own photographs and art. And, I'll used audacity and notepad ++.</p>
+<p>For the final project, I decided to amplify the glitch art project with some of my own photographs and art. I started off by exploring the different effects from Audacity and also Notepad ++.</p>
 <p> - </p>
 <p>Click <a href="https://docs.google.com/presentation/d/1Dp5OSGxex3PjfOw6TgiXNPUMhfdVb77XNs6df5E1VqA/edit?usp=sharing">HERE</a> to see the before/after photos, and the effects I used to glitch these images.</p>
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="victory.png" alt="hello" style="width:750px;height:1050px;">
+<p> Here are my final glitch images made from Audacity using the invert effect.</p>
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="chicken.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.4.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="taylor.1.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.8.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="hend.png" alt="hello" style="width:750px;height:1000px;">
+<img class="img-fluid mx-auto d-block" src="invert.20.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="lights.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.1.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="aubrey.png" alt="hello" style="width:750px;height:950px;">
+<img class="img-fluid mx-auto d-block" src="invert.17.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="kirstin.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.10.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="aesthetic.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.19.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="llama.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.18.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="sky.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.9.png" alt="hello" style="width:750px;height:650px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="xavier.1.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.2.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="berbs.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.16.png" alt="hello" style="width:750px;height:550px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="taylor.2.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.3.png" alt="hello" style="width:750px;height:550px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="xavier.2.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.11.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="hends.png" alt="hello" style="width:750px;height:950px;">
+<img class="img-fluid mx-auto d-block" src="invert.5.png" alt="hello" style="width:750px;height:1000px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="fish.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.7.png" alt="hello" style="width:750px;height:850px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="cat.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.6.png" alt="hello" style="width:750px;height:950px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="art.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.12.png" alt="hello" style="width:750px;height:750px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="europe.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.13.png" alt="hello" style="width:750px;height:750px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="doods.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.14.png" alt="hello" style="width:750px;height:650px;">
 <p> - </p>
-<img class="img-fluid mx-auto d-block" src="flower.png" alt="hello" style="width:750px;height:750px;">
-<p> - </p>
-<img class="img-fluid mx-auto d-block" src="cloth.png" alt="hello" style="width:750px;height:750px;">
+<img class="img-fluid mx-auto d-block" src="invert.15.png" alt="hello" style="width:750px;height:750px;">
 
 </div>
 </body>
